# Engineering-training-competition

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/action_demo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/cv_bridge/: .catkin
devel/.private/gazebo_dev/: .catkin  .rosinstall  setup.sh
devel/.private/gazebo_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/gazebo_plugins/: .catkin  .rosinstall  setup.sh
devel/.private/gazebo_ros/: .catkin  local_setup.sh
devel/.private/gazebo_ros_control/: .catkin  local_setup.sh  setup.sh
devel/.private/gazebo_ros_pkgs/: .catkin  .rosinstall  setup.sh
devel/.private/image_geometry/: .catkin  setup.sh
devel/.private/msgs_demo/: .catkin
devel/.private/offb/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/offb_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/offbopencv/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/opencv_tests/: .catkin  local_setup.sh
devel/.private/px4_ui/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/test2/: .catkin  local_setup.sh  setup.sh
devel/.private/vision_opencv/: .catkin  .rosinstall  _setup_util.py
devel/include/action_demo/: DoDishesAction.h  DoDishesActionFeedback.h  DoDishesActionGoal.h  DoDishesActionResult.h  DoDishesFeedback.h  DoDishesGoal.h  DoDishesResult.h
devel/include/gazebo_msgs/: ApplyBodyWrench.h  ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffort.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequest.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteLight.h  DeleteLightRequest.h  DeleteLightResponse.h  DeleteModel.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointProperties.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLightProperties.h  GetLightPropertiesRequest.h  GetLightPropertiesResponse.h  GetLinkProperties.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkState.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelProperties.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelState.h  GetModelStateRequest.h  GetModelStateResponse.h  GetPhysicsProperties.h  GetPhysicsPropertiesRequest.h  GetPhysicsPropertiesResponse.h  GetWorldProperties.h  GetWorldPropertiesRequest.h  (+40 more)
devel/include/gazebo_plugins/: CameraSynchronizerConfig.h  GazeboRosCameraConfig.h  GazeboRosOpenniKinectConfig.h  HokuyoConfig.h  WheelSlipConfig.h
devel/include/gazebo_ros/: PhysicsConfig.h
devel/include/offb/: Circle.h
devel/include/offb_msgs/: ArucoInfo.h  AttitudeReference.h  BoundingBox.h  BoundingBoxes.h  ControlCommand.h  ControlOutput.h  DetectionInfo.h  DroneState.h  Formation.h  IndoorSearch.h  LogMessage.h  LogMessageControl.h  Message.h  (+7 more)
logs/cv_bridge/: build.check.002.log.stderr
logs/offb/: build.check.085.log.stderr  build.check.090.log.stderr  build.check.104.log.stderr  build.check.110.log.stderr  build.check.113.log.stderr  build.check.114.log.stderr  build.check.152.log.stderr  build.cmake.000.log.stderr  build.cmake.005.log.stderr  build.cmake.007.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.041.log.stderr  build.make.042.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.060.log.stderr  build.make.064.log.stderr  build.make.067.log.stderr  build.make.068.log.stderr  build.make.069.log.stderr  build.make.070.log.stderr  build.make.072.log.stderr  build.make.074.log.stderr  build.make.079.log.stderr  build.make.083.log.stderr  (+31 more)
logs/offbopencv/: build.check.001.log.stderr  build.check.030.log.stderr  build.check.034.log.stderr  build.check.039.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.036.log.stderr  build.make.045.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr
logs/opencv_tests/: build.check.000.log.stderr
logs/px4_ui/: build.make.125.log.stderr
logs/test2/: build.check.001.log.stderr
src/offb/: CMakeLists.txt  package.xml
src/offb/include/: landing_quadrotor.h  mission.h  multi_input.h  offboard_control.h  state_from_mavros.h  test_mode.h
src/offb/launch/: H.launch  com.launch  com_test.launch  control.launch  datasave.launch  fly_remix.launch  fly_servo.launch  mul.launch  remix.launch  remote_station.launch  remote_uav.launch  take_off_test.launch  test.launch  test_serial.launch
src/offb/msg/: Circle.msg
src/offb/scripts/: cam.py  multirotor_communication.py  multirotor_keyboard_control.py  new_target.py
src/offb/src/: H_detect.cpp  com.cpp  communicate.cpp  cycle_detect_new.cpp  cycle_detect_old1.cpp  fly.cpp  fly_putting.cpp  multi_input.cpp  node_flyput.cpp  node_flyput_fixed.cpp  node_flyput_old.cpp  offb.cpp  send_info.cpp  servo_control.cpp  set_mode.cpp  showinfo.cpp  square_detect.cpp  takeoff_test.cpp  test.cpp  test_mode.cpp  workspace.code-workspace
src/test2/: CMakeLists.txt
src/vision/: Detect_pytorch.py
(+708 files in other folders)
